--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -17,10 +17,10 @@
         margin-right: 1.5rem;
       }
 
-      svg {
-        cursor: pointer;
-        transition: 0.3s ease;
-      }
+      // svg {
+      //   cursor: pointer;
+      //   transition: 0.3s ease;
+      // }
 
       .menu {
         width: 100%;
@@ -38,6 +38,16 @@
         .navbar {
           flex-direction: column;
           align-items: center;
+
+          .signout {
+            background-color: $ten;
+            color: $white;
+            border: none;
+          }
+
+          .signout:hover {
+            filter: brightness(80%);
+          }
         }
 
         .navbar-a {
@@ -50,26 +60,59 @@
           align-items: center;
           border-radius: 20px;
 
-          a {
-            color: black;
-            border-radius: 15px;
-            padding: 0.5rem;
-            box-shadow: 0px 0px 6px 0px #999;
+          * {
+            color: $ten;
+          }
+
+          a.p-current::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            transform: scaleX(1);
+            height: 2px;
+            bottom: -3px;
+            left: 0;
+            background-color: $highlight;
+            transform-origin: bottom left;
+            transition: transform 0.25s ease-out;
+          }
+
+          a::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            transform: scaleX(0);
+            height: 2px;
+            bottom: -3px;
+            left: 0;
+            background-color: $highlight;
+            transform-origin: bottom left;
+            transition: transform 0.25s ease-out;
+          }
+
+          a:hover::after {
+            transform: scaleX(1);
+            transform-origin: bottom left;
           }
 
           button {
-            box-shadow: 0 0 10px 2px rgba(4, 4, 4, 0.4);
             border-radius: 15px;
-            min-width: 6rem;
+            border: 2px solid $ten;
+            background: whitesmoke;
+            font-size: 1rem;
           }
 
-          li:nth-child(3) button {
+          .logout {
+            font-weight: 600;
+          }
+
+          button:hover {
             background-color: $ten;
             color: $white;
           }
 
-          li:nth-child(3) button:hover {
-            filter: brightness(80%);
+          .profile-icon {
+            color: $ten;
           }
         }
       }
@@ -80,6 +123,11 @@
         color: white;
         top: 1.4rem;
         right: 1.4rem;
+      }
+
+      .close-icon,
+      .burger {
+        cursor: pointer;
       }
 
       .hidden,
