--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -193,34 +193,34 @@ footer {
       align-items: center;
       color: white;
 
-      li:nth-child(2) > a {
-        background-color: $white;
-        color: $ten;
-        font-size: 1.2rem;
-        padding: 0.5rem;
-        border-radius: 15px;
-      }
+      // li:nth-child(2) > a {
+      //   background-color: $white;
+      //   color: $ten;
+      //   font-size: 1.2rem;
+      //   padding: 0.5rem;
+      //   border-radius: 15px;
+      // }
 
-      li:nth-child(2) > a:hover {
-        filter: brightness(90%);
-        background-color: $white;
-        color: $ten;
-      }
+      // li:nth-child(2) > a:hover {
+      //   filter: brightness(90%);
+      //   background-color: $white;
+      //   color: $ten;
+      // }
 
-      li:nth-child(3) > a {
-        background-color: $ten;
-        color: $white;
-        font-size: 1.2rem;
-        padding: 0.5rem;
-        border-radius: 15px;
-      }
+      // li:nth-child(3) > a {
+      //   background-color: $ten;
+      //   color: $white;
+      //   font-size: 1.2rem;
+      //   padding: 0.5rem;
+      //   border-radius: 15px;
+      // }
 
-      li:nth-child(3) > a:hover {
-        background-color: darken($color: $ten, $amount: 10%);
-        color: $white;
-      }
+      // li:nth-child(3) > a:hover {
+      //   background-color: darken($color: $ten, $amount: 10%);
+      //   color: $white;
+      // }
 
-      a.p-current::after {
+      .underline.p-current::after {
         content: "";
         position: absolute;
         width: 100%;
@@ -233,7 +233,7 @@ footer {
         transition: transform 0.25s ease-out;
       }
 
-      a::after {
+      .underline::after {
         content: "";
         position: absolute;
         width: 100%;
@@ -246,7 +246,7 @@ footer {
         transition: transform 0.25s ease-out;
       }
 
-      a:hover::after {
+      .underline:hover::after {
         transform: scaleX(1);
         transform-origin: bottom left;
       }
@@ -255,6 +255,9 @@ footer {
     .profile-icon {
       cursor: pointer;
       transition: all 0.5s;
+      path {
+        pointer-events: none;
+      }
     }
 
     .profile-icon:hover {
@@ -262,21 +265,22 @@ footer {
     }
 
     .acct-menu {
-      position: absolute;
-      right: 1.5rem;
-      top: 5.5rem;
-      list-style: none;
+      height: 10rem;
+      width: 12rem;
+      font-size: 1.2rem;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      gap: 1rem;
+      gap: 0.5rem;
+      position: absolute;
+      right: 1.5rem;
+      top: 5.5rem;
+      list-style: none;
       background-color: white;
       color: $ten;
       border-radius: 20px;
       border: 2px solid;
-      height: 13rem;
-      width: 12rem;
       transition: all 0.3s;
 
       li > a {
