--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -1168,3 +1168,53 @@ input[name="email"] {
 .bookmarked {
   color: $highlight;
 }
+
+///////////////////////////// dashboard
+
+#dashboard {
+  width: 100vw;
+  height: 100vh;
+  width: 100svw;
+  height: 100svh;
+  padding-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+  margin-left: 3rem;
+  color: black;
+
+  h1 {
+    font-size: 5rem;
+    font-family: "Times New Roman", Times, serif !important;
+  }
+
+  .dashboard-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+    width: 88%;
+    align-items: center;
+
+    h2 {
+      border-bottom: 1px solid black;
+    }
+
+    h2:nth-child(2) {
+      text-align: center;
+    }
+
+    button {
+      width: fit-content;
+      margin: auto;
+    }
+  }
+
+  .del-acct {
+    position: absolute;
+    bottom: 1rem;
+    width: fit-content;
+    font-weight: 900;
+    background-color: #2b2b2b;
+    color: red;
+  }
+}
