--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -1203,6 +1203,14 @@ input[name="email"] {
       text-align: center;
     }
 
+    h2:nth-child(4) {
+      text-align: center;
+    }
+
+    h2:nth-child(6) {
+      text-align: center;
+    }
+
     button {
       width: fit-content;
       margin: auto;
