--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -1271,3 +1271,38 @@ input[name="email"] {
     }
   }
 }
+
+/////////////////////////////////// RESET PASSWORD PAGE
+
+#resetPass {
+  height: 100vh;
+  width: 100vw;
+  height: 100svh;
+  width: 100svw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .signup-wrapper {
+    max-width: 28rem;
+  }
+
+  .formInputs {
+    width: 80%;
+    .grid-display {
+      margin-bottom: 0.8rem;
+    }
+  }
+
+  p {
+    font-size: 0.8rem;
+    width: 90%;
+    text-align: center;
+    margin: auto;
+  }
+
+  .submit-buttons {
+    text-align: center;
+    margin-top: 2rem;
+  }
+}
