--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1471,4 +1471,36 @@ input[name=email] {
 #resetPass .submit-buttons {
   text-align: center;
   margin-top: 2rem;
+}
+
+.cookie-consent-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 2rem 0;
+  z-index: 1000;
+}
+.cookie-consent-container .cookie-consent-message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cookie-consent-container .cookie-consent-message > p {
+  padding: 0 3rem;
+}
+.cookie-consent-container .consent-button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+.cookie-consent-container .consent-button:hover {
+  background-color: #45a049;
 }/*# sourceMappingURL=app.css.map */
