update sign up form size for mobile

--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -294,6 +294,10 @@
     #register {
       .signup-wrapper {
         width: 73%;
+
+        .formInputs {
+          gap: 1rem;
+        }
       }
     }
   }
