--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -794,6 +794,7 @@ button:hover {
     justify-content: center;
     width: 40%;
     max-width: 370px;
+    min-width: 280px;
     min-height: 404px;
     height: 51%;
     align-items: center;
