--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -216,6 +216,9 @@
   html body #register .signup-wrapper {
     width: 73%;
   }
+  html body #register .signup-wrapper .formInputs {
+    gap: 1rem;
+  }
 }
 @keyframes rotate {
   0% {
@@ -1020,6 +1023,7 @@ button:hover {
   justify-content: center;
   width: 40%;
   max-width: 370px;
+  min-width: 280px;
   min-height: 404px;
   height: 51%;
   align-items: center;
