--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -149,8 +149,8 @@
   html body {
     // overflow: auto;
     #root {
-      height: 100svh;
-      width: 100svw;
+      height: 100dvh;
+      width: 100dvw;
     }
     #heading {
       nav {
@@ -205,7 +205,7 @@
     //////////////////// Recipe section ///////////////
 
     #recipe {
-      height: 100svh;
+      // height: 100svh;
       // .search {
       // transform: translateX(-50%);
       // }
@@ -216,7 +216,8 @@
 
         .food-img {
           height: 22%;
-          right: 1rem;
+          right: 0rem;
+          top: 7.5rem;
         }
 
         .content {
