--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -531,7 +531,7 @@ button:hover {
 
     .food-img {
       position: absolute;
-      width: fit-content;
+      width: 50%;
       height: 50%;
       top: 4.2rem;
       right: 0;
