--- a/client/src/sass/app.scss
+++ b/client/src/sass/app.scss
@@ -143,7 +143,8 @@ footer {
 }
 
 .navBgColor {
-  background-color: $navBar;
+  // background-color: $navBar;
+  background: linear-gradient(to bottom, rgb(63, 35, 35) 80%, rgba(0, 0, 0, 0));
 }
 
 .line-height {
@@ -642,14 +643,13 @@ button:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("../assets/img/about_bg.avif");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 95%,
+      rgba(242, 232, 198, 1)
+    ),
+    url("/src/assets/img/about_bg.avif");
   background-size: cover;
-
-  //   img {
-  //     width: 100%;
-  //     height: 100%;
-  //     position: absolute;
-  //   }
 
   .content {
     background: rgba(255, 255, 255, 0.5);
