--- a/client/src/sass/abstracts/_media.scss
+++ b/client/src/sass/abstracts/_media.scss
@@ -214,8 +214,13 @@
         flex-wrap: wrap;
         position: relative;
 
+        .modal-ph {
+          width: 100%;
+        }
+
         .food-img {
-          height: 22%;
+          // height: 22%;
+          height: 22dvh;
           right: 0rem;
           top: 7.5rem;
           width: auto;
